# cuImageProcessor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  crop.cu  flip.cu  grayscale.cu  resize.cu  rotate.cu
include/cuImageProcessor/: bitmap.cuh  crop.cuh  flip.cuh  grayscale.cuh  resize.cuh  rotate.cuh
